Merge Person_Info_URL feature
-Add AlertsController GET /personInfo
-Add AlertsService getPersonInfo() method
-Add PersonService findByAddress() and findByCity method
-Refactor AlertsService dependancies
-Add Unit Tests and Integration Tests
-Update Alerts API Documentation