@@ -8,11 +8,12 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.safetynet.alerts.dto.PersonInfoDto;
 import com.safetynet.alerts.exception.ResourceNotFoundException;
 import com.safetynet.alerts.model.FireStation;
+import com.safetynet.alerts.model.MedicalRecord;
 import com.safetynet.alerts.model.Person;
-import com.safetynet.alerts.repository.FireStationRepository;
-import com.safetynet.alerts.repository.PersonRepository;
+import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
@@ -30,10 +31,13 @@ class AlertsServiceTest {
   private AlertsService alertsService;
 
   @MockBean
-  PersonRepository personRepository;
+  PersonService personService;
   
   @MockBean
-  FireStationRepository fireStationRepository;
+  FireStationService fireStationService;
+  
+  @MockBean
+  MedicalRecordService medicalRecordService;
 
   private Person personTest;
   private Person personTest2;
@@ -52,7 +56,7 @@ class AlertsServiceTest {
   @Test
   void getCommunityEmailTest() throws Exception {
     // GIVEN
-    when(personRepository.findByCity(anyString())).thenReturn(List.of(
+    when(personService.getByCity(anyString())).thenReturn(List.of(
             personTest, personTest2, personTest3));
 
     // WHEN
@@ -60,7 +64,7 @@ class AlertsServiceTest {
 
     // THEN
     assertThat(actualList).isEqualTo(List.of("email@mail.fr", "email2@mail.fr"));
-    verify(personRepository, times(1)).findByCity("city");
+    verify(personService, times(1)).getByCity("city");
   }
 
   @Test
@@ -70,7 +74,7 @@ class AlertsServiceTest {
             "000-000-0001", null);
     Person personBlankEmail = new Person("firstName", "lastName", "address", "city", "0001", 
             "000-000-0001", "  ");
-    when(personRepository.findByCity(anyString())).thenReturn(List.of(
+    when(personService.getByCity(anyString())).thenReturn(List.of(
             personTest, personNullEmail, personBlankEmail));
 
     // WHEN
@@ -78,13 +82,14 @@ class AlertsServiceTest {
 
     // THEN
     assertThat(actualList).isEqualTo(List.of("email@mail.fr"));
-    verify(personRepository, times(1)).findByCity("city");
+    verify(personService, times(1)).getByCity("city");
   }
   
   @Test
   void getCommunityEmailNotFoundTest() throws Exception {
     // GIVEN
-    when(personRepository.findByCity(anyString())).thenReturn(Collections.emptyList());
+    when(personService.getByCity(anyString())).thenThrow(
+            new ResourceNotFoundException("No residents found for city9"));
 
     // WHEN
     assertThatThrownBy(() -> {
@@ -93,24 +98,25 @@ class AlertsServiceTest {
 
             // THEN
             .isInstanceOf(ResourceNotFoundException.class)
-            .hasMessageContaining("No residents for city9 found");
+            .hasMessageContaining("No residents found for city9");
   }
 
   @Test
   void getPhoneAlertTest() throws Exception {
     // GIVEN
-    when(fireStationRepository.findByStation(anyInt())).thenReturn(List.of(
+    when(fireStationService.getByStation(anyInt())).thenReturn(List.of(
             new FireStation(1, "address"), new FireStation(1, "address2")));
-    when(personRepository.findByAddress(anyString())).thenReturn(List.of(
-            personTest, personTest2)).thenReturn(Collections.emptyList());
+    when(personService.getByAddress(anyString())).thenReturn(List.of(
+            personTest, personTest2)).thenThrow(
+                    new ResourceNotFoundException("No residents found living at address2"));
 
     // WHEN
     List<String> actualList = alertsService.getPhoneAlert(1);
 
     // THEN
     assertThat(actualList).isEqualTo(List.of("000-000-0001"));
-    verify(fireStationRepository, times(1)).findByStation(1);
-    verify(personRepository, times(2)).findByAddress(anyString());
+    verify(fireStationService, times(1)).getByStation(1);
+    verify(personService, times(2)).getByAddress(anyString());
   }
 
 
@@ -121,25 +127,27 @@ class AlertsServiceTest {
             "email@mail.fr");
     Person personBlankEmail = new Person("firstName", "lastName", "address", "city", "0001", "  ",
             "email@mail.fr");
-    when(fireStationRepository.findByStation(anyInt())).thenReturn(List.of(
+    when(fireStationService.getByStation(anyInt())).thenReturn(List.of(
             new FireStation(1, "address"), new FireStation(1, "address2")));
-    when(personRepository.findByAddress(anyString())).thenReturn(List.of(
-            personTest, personNullEmail, personBlankEmail)).thenReturn(Collections.emptyList());
+    when(personService.getByAddress(anyString())).thenReturn(List.of(
+            personTest, personNullEmail, personBlankEmail)).thenThrow(
+                    new ResourceNotFoundException("No residents found living at address2"));
 
     // WHEN
     List<String> actualList = alertsService.getPhoneAlert(1);
 
     // THEN
     assertThat(actualList).isEqualTo(List.of("000-000-0001"));
-    verify(fireStationRepository, times(1)).findByStation(1);
-    verify(personRepository, times(2)).findByAddress(anyString());
+    verify(fireStationService, times(1)).getByStation(1);
+    verify(personService, times(2)).getByAddress(anyString());
   }
 
   
   @Test
   void getPhoneAlertAddressesNotFoundTest() throws Exception {
     // GIVEN
-    when(fireStationRepository.findByStation(anyInt())).thenReturn(Collections.emptyList());
+    when(fireStationService.getByStation(anyInt())).thenThrow(
+            new ResourceNotFoundException("No addresses mapped for station 9 found"));
 
     // WHEN
     assertThatThrownBy(() -> {
@@ -148,24 +156,66 @@ class AlertsServiceTest {
 
             // THEN
             .isInstanceOf(ResourceNotFoundException.class)
-            .hasMessageContaining("No addresses mapped found for station 9");
+            .hasMessageContaining("No addresses mapped for station 9 found");
+    verify(fireStationService, times(1)).getByStation(9);
+    verify(personService, times(0)).getByAddress(anyString());
   }
   
   @Test
-  void getPhoneAlertPhoneNumbersNotFoundTest() throws Exception {
+  void getPersonInfoTest() throws Exception {
     // GIVEN
-    when(fireStationRepository.findByStation(anyInt())).thenReturn(List.of(
-            new FireStation(1, "address9")));
-    when(personRepository.findByAddress(anyString())).thenReturn(Collections.emptyList());
+    Person person = new Person("firstName", "lastName", "address", "city", "", "", "");
+    MedicalRecord medicalRecord = new MedicalRecord("firstName", "lastName",
+            LocalDate.ofYearDay(1980, 1), List.of("med1", "med2"), Collections.emptyList());
+    PersonInfoDto expectedDto = new PersonInfoDto("firstName", "lastName", "address", 41,
+            List.of("med1", "med2"), Collections.emptyList());
+    when(personService.getByName(anyString(), anyString())).thenReturn(person);
+    when(medicalRecordService.getByName(anyString(), anyString())).thenReturn(medicalRecord);
 
     // WHEN
+    List<PersonInfoDto> actualList = alertsService.getPersonInfo("firstName", "lastName");
+
+    // THEN
+    assertThat(actualList).usingRecursiveComparison().isEqualTo(List.of(expectedDto));
+    verify(personService, times(1)).getByName("firstName", "lastName");
+    verify(medicalRecordService, times(1)).getByName("firstName", "lastName");
+  }
+
+  @Test
+  void getPersonInfoNotFoundTest() throws Exception {
+    // GIVEN
+    when(personService.getByName(anyString(), anyString())).thenThrow(
+            new ResourceNotFoundException("firstName lastName not found"));
+    
+    // WHEN
     assertThatThrownBy(() -> {
-      alertsService.getPhoneAlert(9);
+      alertsService.getPersonInfo("firstName", "lastName");
     })
 
             // THEN
             .isInstanceOf(ResourceNotFoundException.class)
-            .hasMessageContaining("No phone numbers for resident covered by station 9 found");
+            .hasMessageContaining("firstName lastName not found");
+    verify(personService, times(1)).getByName("firstName", "lastName");
+    verify(medicalRecordService, times(0)).getByName(anyString(), anyString());
+  }
+  
+  @Test
+  void getPersonInfoMedicalRecordNotFoundTest() throws Exception {
+    // GIVEN
+    Person person = new Person("firstName", "lastName", "address", "city", "", "", "");
+    PersonInfoDto expectedDto = new PersonInfoDto("firstName", "lastName", "address", null,
+            null, null);
+    when(personService.getByName(anyString(), anyString())).thenReturn(person);
+    when(medicalRecordService.getByName(anyString(), anyString())).thenThrow(
+            new ResourceNotFoundException("Medical record of firstName lastName not found"));
+
+    // WHEN
+    List<PersonInfoDto> actualList = alertsService.getPersonInfo("firstName", "lastName");
+
+    // THEN
+    assertThat(actualList).usingRecursiveComparison().isEqualTo(List.of(expectedDto));
+    verify(personService, times(1)).getByName("firstName", "lastName");
+    verify(medicalRecordService, times(1)).getByName("firstName", "lastName");
   }
   
 }
